@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-13T08:12:15Z",
-  "count_outdated" : 160,
-  "uniques_outdated" : 134,
+  "timestamp" : "2023-08-14T16:12:54Z",
+  "count_outdated" : 162,
+  "uniques_outdated" : 136,
   "count" : 169,
   "uniques" : 143,
   "clones" : [
-    {
-      "timestamp": "2023-07-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-08-01T00:00:00Z",
       "count": 1,
